testing reindexing of import candidates